--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  gap: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.value {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.label {
+  margin-top: -5px;
+  font-size: 10px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
